--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,8 @@ permissions:
 
 env:
   LOCAL_IMAGE: uav-assessment-env:ci
-  GHCR_IMAGE: ghcr.io/${{ github.repository_owner }}/uav-assessment-env
+  # Repo'ya özgü isim: paket otomatik bu repoya linklenir
+  GHCR_IMAGE: ghcr.io/${{ github.repository_owner }}/uav-assessment-cpp-env
 
 jobs:
   sim-tests:
@@ -31,8 +32,6 @@ jobs:
           buildkitd-flags: --debug
 
       - name: 🐳 Build image (load for tests)
-        id: build_image
-        continue-on-error: true
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -46,7 +45,7 @@ jobs:
       - name: 🔧 Make scripts executable
         run: |
           chmod +x run_sitl.sh run_mavros.sh
-          chmod +x src/uav_tests_cpp/tests/run_e2e.sh
+          chmod +x src/uav_tests_cpp/tests/run_e2e.sh || true
 
       # ---------- MAVROS smoke ----------
       - name: 🧪 MAVROS smoke
@@ -59,24 +58,26 @@ jobs:
             set -eo pipefail
             mkdir -p /ws/.ci_artifacts
             source /opt/ros/humble/setup.bash
+
             ./run_sitl.sh &
             sleep 5
             nohup ./run_mavros.sh 14557 > /tmp/mavros.log 2>&1 &
+
             ok=0
             for i in $(seq 1 40); do
               source /opt/ros/humble/setup.bash
               if ros2 topic list 2>/dev/null | grep -q "/mavros/state"; then ok=1; break; fi
               sleep 0.5
             done
+
             cp /tmp/sitl.log  .ci_artifacts/smoke_sitl.log  2>/dev/null || true
             cp /tmp/mavros.log .ci_artifacts/smoke_mavros.log 2>/dev/null || true
+
             exit $([ "$ok" -eq 1 ] && echo 0 || echo 1)
           '
-          rc=$?
-          echo "rc=$rc" >> "$GITHUB_OUTPUT"
-          exit $rc
+          echo "rc=$?" >> "$GITHUB_OUTPUT"
 
-      # ---------- Build (colcon) ----------
+      # ---------- Build ----------
       - name: 🧱 Build (colcon)
         id: build_cpp
         shell: bash
@@ -88,9 +89,7 @@ jobs:
             source /opt/ros/humble/setup.bash
             colcon build --symlink-install --packages-up-to uav_tests_cpp
           '
-          rc=$?
-          echo "rc=$rc" >> "$GITHUB_OUTPUT"
-          exit $rc
+          echo "rc=$?" >> "$GITHUB_OUTPUT"
 
       # ---------- Task 1 ----------
       - name: ▶️ Task 1 – Arm/Disarm
@@ -103,20 +102,17 @@ jobs:
             set -eo pipefail
             source /opt/ros/humble/setup.bash
             source install/setup.bash
+
             rc=0
-            # Kritik: test fail ederse non-zero dönsün
-            colcon test --packages-select uav_tests_cpp \
-              --return-code-on-test-failure \
-              --ctest-args -R "^task1_arm_disarm$" -VV || rc=$?
+            colcon test --packages-select uav_tests_cpp --ctest-args -R "^task1_arm_disarm$" -VV || rc=$?
             colcon test-result --all --verbose || true
+
             mkdir -p .ci_artifacts
             cp /tmp/sitl_e2e.log   .ci_artifacts/task1_sitl.log   2>/dev/null || true
             cp /tmp/mavros_e2e.log .ci_artifacts/task1_mavros.log 2>/dev/null || true
             exit $rc
           '
-          rc=$?
-          echo "rc=$rc" >> "$GITHUB_OUTPUT"
-          exit $rc
+          echo "rc=$?" >> "$GITHUB_OUTPUT"
 
       # ---------- Task 2 ----------
       - name: ▶️ Task 2 – Takeoff/Land
@@ -129,19 +125,17 @@ jobs:
             set -eo pipefail
             source /opt/ros/humble/setup.bash
             source install/setup.bash
+
             rc=0
-            colcon test --packages-select uav_tests_cpp \
-              --return-code-on-test-failure \
-              --ctest-args -R "^task2_takeoff_land$" -VV || rc=$?
+            colcon test --packages-select uav_tests_cpp --ctest-args -R "^task2_takeoff_land$" -VV || rc=$?
             colcon test-result --all --verbose || true
+
             mkdir -p .ci_artifacts
             cp /tmp/sitl_e2e.log   .ci_artifacts/task2_sitl.log   2>/dev/null || true
             cp /tmp/mavros_e2e.log .ci_artifacts/task2_mavros.log 2>/dev/null || true
             exit $rc
           '
-          rc=$?
-          echo "rc=$rc" >> "$GITHUB_OUTPUT"
-          exit $rc
+          echo "rc=$?" >> "$GITHUB_OUTPUT"
 
       - name: 📎 Upload artifacts
         if: always()
@@ -150,9 +144,9 @@ jobs:
           name: ci-artifacts
           path: .ci_artifacts
 
-      # ---------- GHCR push (dene, ama job'ı düşürme) ----------
+      # ---------- GHCR push (PR hariç her durumda dene) ----------
       - name: 🔐 Login to GHCR
-        if: ${{ github.event_name != 'pull_request' && github.repository_owner == github.actor }}
+        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -160,8 +154,8 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 📦 Publish image to GHCR
-        id: publish
-        if: ${{ github.event_name != 'pull_request' && github.repository_owner == github.actor }}
+        id: ghcr_push
+        if: ${{ github.event_name != 'pull_request' }}
         continue-on-error: true
         uses: docker/build-push-action@v5
         with:
@@ -175,13 +169,13 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # ---------- Summary (renkli rozetlerle) ----------
+      # ---------- Summary (renkli rozetler) ----------
       - name: 📝 Summary
         if: always()
         shell: bash
         run: |
           badge () {
-            # $1: label  $2: rc (0/!=0)
+            # $1 label, $2 rc (0/!=0)
             if [ "$2" -eq 0 ]; then
               echo "![${1}](https://img.shields.io/badge/${1// /%20}-SUCCESS-brightgreen)"
             else
@@ -192,8 +186,17 @@ jobs:
             echo "## 🛩️ UAV Assessment (C++)"
             echo
             echo "$(badge "MAVROS smoke"  ${{ steps.mavros_smoke.outputs.rc || 1 }})"
-            echo "$(badge "Task 1"        ${{ steps.task1.outputs.rc || 1 }})"
-            echo "$(badge "Task 2"        ${{ steps.task2.outputs.rc || 1 }})"
+            echo "$(badge "Task 1"        ${{ steps.task1.outputs.rc       || 1 }})"
+            echo "$(badge "Task 2"        ${{ steps.task2.outputs.rc       || 1 }})"
+            echo
+            echo "### 🐋 Docker (GHCR)"
+            echo "- Push denemesi: **${{ steps.ghcr_push.outcome || 'skipped' }}**"
+            echo
+            echo '```bash'
+            echo "docker pull ${{ env.GHCR_IMAGE }}:latest"
+            echo "docker pull ${{ env.GHCR_IMAGE }}:${{ github.sha }}"
+            echo "docker run -it --rm ${{ env.GHCR_IMAGE }}:latest bash"
+            echo '```'
             echo
             echo "<details><summary>🧾 MAVROS smoke – log tail</summary>"
             echo
@@ -217,13 +220,4 @@ jobs:
             [ -f .ci_artifacts/task2_mavros.log ] && tail -n  80 .ci_artifacts/task2_mavros.log || echo "(no task2_mavros.log)"
             echo '```'
             echo "</details>"
-            echo
-            echo "### 🐋 Docker (GHCR)"
-            echo "Push denemesi: **${{ steps.publish.outcome || 'skipped' }}**"
-            echo
-            echo '```bash'
-            echo "docker pull ${{ env.GHCR_IMAGE }}:latest"
-            echo "docker pull ${{ env.GHCR_IMAGE }}:${{ github.sha }}"
-            echo "docker run -it --rm ${{ env.GHCR_IMAGE }}:latest bash"
-            echo '```'
           } >> "$GITHUB_STEP_SUMMARY"
